--- a/zhundao/Main/Activity/PGActivityConsultTableViewCell.xib
+++ b/zhundao/Main/Activity/PGActivityConsultTableViewCell.xib
@@ -1,34 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="consultID" rowHeight="129" id="KGk-i7-Jjw" customClass="ConsultTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="consultID" rowHeight="129" id="KGk-i7-Jjw" customClass="PGActivityConsultTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="370" height="129"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="337" height="128.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="343" height="129"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hvv-mL-qTq">
-                        <rect key="frame" x="16" y="26" width="50.5" height="48.5"/>
+                        <rect key="frame" x="23" y="29" width="51.5" height="49"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="hvv-mL-qTq" secondAttribute="height" multiplier="58:55" id="c1l-86-gh1"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="阿廖" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cPf-nd-hQP">
-                        <rect key="frame" x="74.5" y="16" width="170.5" height="20"/>
+                        <rect key="frame" x="82.5" y="19" width="169.5" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="T9X-60-ihV"/>
                         </constraints>
@@ -37,7 +32,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已回复" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0AP-r3-3nV">
-                        <rect key="frame" x="301" y="16" width="40" height="20"/>
+                        <rect key="frame" x="308" y="16" width="40" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="Vyb-rv-J0F"/>
                             <constraint firstAttribute="width" constant="40" id="zoc-pa-O3Y"/>
@@ -47,13 +42,13 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3hp-7j-crN">
-                        <rect key="frame" x="75" y="41" width="262" height="54.5"/>
+                        <rect key="frame" x="82.5" y="41" width="261.5" height="52"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.71056698069852942" green="0.67961441738153594" blue="0.91156684027777779" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12个月前" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZoI-01-GK2">
-                        <rect key="frame" x="74.5" y="100.5" width="50" height="20"/>
+                        <rect key="frame" x="82.5" y="98" width="50" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="277-Cw-bhV"/>
                             <constraint firstAttribute="width" constant="50" id="Ipm-CO-PMY"/>
@@ -63,7 +58,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="未推荐" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mHs-3o-x9u">
-                        <rect key="frame" x="253" y="16" width="40" height="20"/>
+                        <rect key="frame" x="260" y="19" width="40" height="20"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="40" id="WtN-Mj-eCf"/>
                             <constraint firstAttribute="height" constant="20" id="sfa-o1-Mff"/>
